--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,10 @@
 .button{
-    position: block;
-    height: 70px;
-    width: 70px;
+    height: 65px;
+    width: 65px;
+    margin: 5px;
     border-radius: 30px 30px;
     background-color: gray;
+    font-size: 20px;
+    border: none;
 }
+
