--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -5,6 +5,11 @@
     border-radius: 30px 30px;
     background-color: gray;
     font-size: 20px;
+    
     border: none;
 }
 
+.button:hover {
+    background-color:rgb(104, 95, 89);
+    transition: 0.5s
+}
