--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -13,3 +13,20 @@
     background-color:rgb(104, 95, 89);
     transition: 0.5s
 }
+
+
+.buttonOperation{
+    height: 65px;
+    width: 65px;
+    margin: 5px;
+    border-radius: 30px 30px;
+    background-color: orange;
+    font-size: 20px;
+    
+    border: none;
+}
+
+.buttonOperation:hover {
+    background-color:rgb(173, 127, 73);
+    transition: 0.5s
+}
